# Pylette

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  palette.py  pyproject.toml  requirements.txt  setup.py  smoke_test.py
.github/: dependabot.yaml
.github/workflows/: ci_tests.yaml  publish-docs-on-master.yaml  publish-to-pypi-test.yaml  publish-to-pypi.yaml
Pylette/: __init__.py  aux.py  cmd.py  cmd_utils.py  color.py  color_extraction.py  gui.py  palette.py  types.py  utils.py
Pylette/gui/: gui.py  style.py
Pylette/src/: cli_utils.py  color.py  color_extraction.py  palette.py  registry.py  types.py  utils.py  utils_colorblindness.py
Pylette/src/extractors/: __init__.py  k_means.py  median_cut.py  oklab.py  protocol.py  registry.py
docs/: index.md  reference.md
pylette/: __init__.py  cmd.py  types.py
pylette/src/: cli_utils.py  color.py  color_extraction.py  colorspaces.py  exceptions.py  operations.py  palette.py  types.py
pylette/src/extractors/: __init__.py  k_means.py  median_cut.py  oklab.py  protocol.py  registry.py
reference/: index.html
search/: search_index.json
tests/: conftest.py
tests/integration/: test_alpha_masking.py  test_batch_processing.py  test_cli.py  test_color_conversion.py  test_color_representation.py  test_colorspaces.py  test_exceptions.py  test_extractor_registry.py  test_invariants.py  test_json_export.py  test_metadata.py  test_oklab.py  test_operations.py  test_resize.py
