[tool.poetry]
name = "pylette"
version = "3.0.0"
description = "A Python library for extracting color palettes from images."
authors = ["Ivar Stangeby"]
license = "MIT"
packages = [
    { include = "Pylette", from = "." },
]
readme = "README.md"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = ">=9.3,<11.0"
numpy = "^1.26.4"
scikit-learn = "^1.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"
types-pillow = "^10.2.0.20240520"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
opencv-python = "^4.10.0.84"
mkdocs = {version = "^1.6.0", extras = ["python"]}
mkdocs-material = "^9.5.27"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-glightbox = "^0.4.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
pylette = "Pylette.cmd:main"
